<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="movies">Movies</string>
    <string name="open">Open</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="favorite_movies">Favorite Movies</string>
</resources>